tab bar fix on mobiles

--- a/src/app/Page.module.scss
+++ b/src/app/Page.module.scss
@@ -5,10 +5,10 @@
 }
 
 .headerButton {
-    border: 1px solid #E1A6B414;
+    border: 1px solid #e1a6b414;
     border-radius: 8px;
     padding: 6px 12px;
     height: 28px;
     background: linear-gradient(0deg, rgba(225, 166, 180, 0.08), rgba(225, 166, 180, 0.08)),
-linear-gradient(0deg, #F5F5F5, #F5F5F5);
+        linear-gradient(0deg, #f5f5f5, #f5f5f5);
 }
